--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.1-fpm
+FROM php:8.0-fpm
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
@@ -19,18 +19,18 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # Install PHP extensions
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 
+# Set working directory
+WORKDIR /var/www
+
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Set working directory
-WORKDIR /var/www/html
-
 # Copy existing application directory contents
-COPY . .
+COPY . /var/www
 
 # Copy existing application directory permissions
-RUN chown -R www-data:www-data /var/www/html
+RUN chown -R www-data:www-data /var/www/html \
+    && chmod -R 775 /var/www/storage /var/www/bootstrap/cache
 
-# Expose port 8000 and start PHP-FPM server
-EXPOSE 8000
-CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
+# Exponha portas usadas no projeto
+EXPOSE 80 443 8000
