--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,39 +1,20 @@
-FROM php:8.0-fpm
+FROM richarvey/nginx-php-fpm:3.1.6
 
-# Install dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    libpng-dev \
-    libjpeg-dev \
-    libfreetype6-dev \
-    libonig-dev \
-    libxml2-dev \
-    zip \
-    unzip \
-    curl \
-    git
+COPY . .
 
-# Clear cache
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+# Image config
+ENV SKIP_COMPOSER 1
+ENV WEBROOT /var/www/html/public
+ENV PHP_ERRORS_STDERR 1
+ENV RUN_SCRIPTS 1
+ENV REAL_IP_HEADER 1
 
-# Install PHP extensions
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
+# Laravel config
+ENV APP_ENV production
+ENV APP_DEBUG false
+ENV LOG_CHANNEL stderr
 
-# Set working directory
-WORKDIR /var/www
+# Allow composer to run as root
+ENV COMPOSER_ALLOW_SUPERUSER 1
 
-# Install Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-# Copy existing application directory contents
-COPY . /var/www
-
-# Instale dependências do projeto
-RUN composer install
-
-# Copy existing application directory permissions
-RUN chown -R www-data:www-data /var/www/html \
-    && chmod -R 775 /var/www/storage /var/www/bootstrap/cache
-
-# Exponha portas usadas no projeto
-EXPOSE 80 443 8000
+CMD ["/start.sh"]
