--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./backend:/var/www
+      - ./backend:/var/www/html
     environment:
       - APP_ENV=local
       - APP_DEBUG=true
       - APP_KEY=
-    command: bash -c "composer install && php artisan serve --host=0.0.0.0 --port=8000"
+    command: bash -c "php artisan serve --host=0.0.0.0 --port=8000"
