--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,4 +17,6 @@ ENV LOG_CHANNEL stderr
 # Allow composer to run as root
 ENV COMPOSER_ALLOW_SUPERUSER 1
 
-CMD ["./start.sh"]
+RUN ["chmod", "+x", "./start.sh"]
+
+CMD ["/start.sh"]
