--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,6 +17,8 @@ ENV LOG_CHANNEL stderr
 # Allow composer to run as root
 ENV COMPOSER_ALLOW_SUPERUSER 1
 
+EXPOSE 80 443
+
 RUN ["chmod", "+x", "./start.sh"]
 
 CMD ["./start.sh"]
